# eindproject_AlexanderDefauw

./: .gitignore  README.md  main.py  pyproject.toml
arduinocode/: versie12_finaal.ino  versie13_finaal.ino
src/: __init__.py
src/data/: __init__.py  gebruikers_opslagplaats.py  locatiegegevens_opslagplaats.py  module_opslagplaats.py  trainings_opslagplaats.py
src/domain/: Gebruiker_service.py  __init__.py  locatie_service.py  module_service.py  trainings_service.py
src/logs/: locaties.json
src/presentation/: __init__.py  app.py
src/presentation/static/: style.css
src/presentation/templates/: base.html  baseNoCSS.html
src/presentation/templates/admin/: all_modules.html  alltrainingen.html  gebruikers.html  getter.html  getterdata.html
src/presentation/templates/user/: bekijk_training.html  gebruiker.html  index.html
