[project]
name = "Boilerplate-UV-Flask"
version = "0.1.0"
description = "Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"